[package]
name = "redis_stream_bus"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
redis = { version = "0.30", features = ["streams", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

[dev-dependencies]
simple_logger = "5.0"
mockall = "0.13"
serde_redis = { version = "0.3", git = "https://github.com/ezex-io/serde-redis" }
tokio = { version = "1.43", features = ["macros"] }
serial_test = "3.2"
