[package]
name = "redis_stream_bus"
version = "0.2.0"
edition = "2024"
authors = ["ezex-io"]
description = "Async Redis Streams client that simplifies publishing, reading, and acknowledging entries."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ezex-io/redis-stream-bus"
documentation = "https://docs.rs/redis-stream-bus"
keywords = ["redis", "redis-streams", "messaging", "event-bus"]
categories = ["database", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
redis = { version = "0.32", features = ["streams", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

[dev-dependencies]
simple_logger = "5.1"
mockall = "0.13"
redis-serde = { version = "0.15" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serial_test = "3.2"

[[example]]
name = "greeting"
path = "examples/greeting.rs"
